# twill-legacy

./: .bumpversion.cfg  .flake8  .gitignore  .hgignore  .hgtags  LICENSE  LICENSE.txt  MANIFEST.in  README.html  README.md  README.rst  README.txt  pyproject.toml  setup.cfg  setup.py  tox.ini  twill-sh  utils.py
.github/workflows/: release-docs.yml  test-package.yml
doc/: ANNOUNCE-0.7.1.txt  ANNOUNCE-0.7.2.txt  ANNOUNCE-0.7.3.txt  ANNOUNCE-0.7.4.txt  ANNOUNCE-0.7.txt  ANNOUNCE-0.8.1.txt  ANNOUNCE-0.8.2.txt  ANNOUNCE-0.8.3.txt  ANNOUNCE-0.8.4.txt  ANNOUNCE-0.8.5.txt  ANNOUNCE-0.8.txt  ANNOUNCE-0.9.txt  ANNOUNCE-0.9b1.txt  ANNOUNCE-1.0.txt  ChangeLog  LICENSE.txt  Makefile  browsing.html  browsing.txt  changelog.html  changelog.txt  commands.html  commands.txt  ctb-notes.txt  default.css  developer.html  developer.txt  examples.html  examples.txt  extensions.html  extensions.txt  index.html  index.txt  install.html  install.txt  make-epydoc.sh  make-quick-fix.sh  other.html  other.txt  problems.html  (+5 more)
doc/advocacy/: simple-example.txt
docs/: Makefile  browsing.rst  changelog.rst  commands.rst  conf.py  developer.rst  examples.rst  extensions.rst  index.rst  install.rst  other.rst  overview.rst  python-api.rst  requirements.txt  testing.rst
examples/: discard-sf-mailman-msgs  extend_example.py  quixote-demo  quixote-demo-2
extras/examples/: discard-sf-mailman-msgs.twill  extend-example.py  extend_example.py  quixote-demo.twill  set-user-agent.twill
extras/maxq/: README.txt  TwillScriptGenerator.java
maxq/: README.txt  TwillScriptGenerator.java
src/twill/: __init__.py  __main__.py  agents.py  browser.py  commands.py  errors.py  fork.py  namespaces.py  parse.py  py.typed  shell.py  unit.py  utils.py
src/twill/extensions/: __init__.py  argparse.py  check_links.py  csv_iterate.py  dirstack.py  dns_check.py  formfill.py  mailman_sf.py  match_parse.py  require.py  shell_test.py
tests/: README.txt  __init__.py  conftest.py  mock_dns.py  server.py  test-back.py  test-basic.py  test-basic.twill  test-broken-html.py  test-buildbot.py  test-checkbox.py  test-dns.py  test-dns.twill  test-dollar-notation-non-strings.py  test-dollar-notation-non-strings.twill  test-encoding.py  test-equiv-refresh.py  test-equiv-refresh.twill  test-find-xpath.py  test-find-xpath.twill  test-find.py  test-find.twill  test-form.py  test-form.twill  test-formfill.py  test-formfill.twill  test-gather.py  test-global-form.py  test-global-form.twill  test-go-fail2.twill  test-go.py  test-go.twill  test-headers.py  test-http-auth.py  test-http-codes.py  test-http-codes.twill  test-info.py  test-misc.py  test-multisub.py  test-multisub.twill  (+68 more)
twill/: __init__.py  __main__.py  _browser.py  agents.py  browser.py  commands.py  config.py  errors.py  fork.py  logconfig.py  namespaces.py  parse.py  shell.py  unit.py  utils.py  wsgi_intercept.py
twill/extensions/: __init__.py  argparse.py  check_links.py  csv_iterate.py  dirstack.py  dns_check.py  formfill.py  mailman_sf.py  match_parse.py  require.py  shell_test_extension.py  timeout.py
twill/extensions/match_parse/: __init__.py  test-match_parse.twill
twill/other_packages/_mechanize_dist/: _http.py  _request.py
